manifests/ingress-7fee.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "akskodey-7fee"
    labels:
        app: "akskodey-7fee"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: akskodey7fee-akskodey-7fee.cfa4f987fa1f4ceda371.westcentralus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "akskodey-7fee"
                servicePort: 80
